--- a/tracker/package.json
+++ b/tracker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tracker",
-  "homepage": "https://<your-username>.github.io/Task-Tracker/",
+  "homepage": "https://Salmapraj.github.io/Task-Tracker/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
